# scrying-sheets

./: LICENSE.txt  README.md  decklist.py  environment.py  mizzium.py  pyproject.toml  rarest_basic.py  scry.py  scryfall.py  style.css
example/: dismissal.txt  izzet-flash.txt  kess-cedh.txt
src/: decklist.py  environment.py  rarest_basic.py  scry.py  scryfall.py
templates/: decklist.html  style.css
